--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function disableClick($) {
 <a href="https://www.chenweiliang.com/">网络营销培训班</a>
 </li>
 
-<li><a href="http://ufoeloha.blog.tianya.cn/" target="_blank" rel="noopener">解密UFO和外星人之谜</a>
+<li><a href="https://ufoeloha.postach.io/post/wai-xing-ren-ye-wan-dian-shang-ying-xiao-wang-zhi-dao-hang-lr" target="_blank">外星人也玩电商营销网址导航（lr）</a>
 </li>
 
 <li><a href="http://blog.sinovision.net/home/space/do/blog/uid/580878/quickforward/1/id/383881.html" target="_blank" rel="noopener">外星人学网络营销的网址导航</a>
@@ -172,6 +172,9 @@ function disableClick($) {
 <a href="https://www.chenweiliang.com/jian-zhan/">建站</a>
 </li><li>
 
+<a href="https://www.chenweiliang.com/siteground/">SiteGround</a>
+</li><li>
+
 <a href="https://www.chenweiliang.com/namesilo/">NameSilo</a>
 
 <a href="https://www.chenweiliang.com/cwl-677.html">NameSilo优惠码</a>
@@ -214,10 +217,6 @@ function disableClick($) {
 </li><li>
 
 <a href="https://www.chenweiliang.com/hong-kong-phone-number/">香港手机号码</a>
-</li><li>
-	
-<a href="https://www.chenweiliang.com/uk-mobile-number/
-" target="_blank">英国手机号码</a>	
 </li><li>
 
 <a href="https://www.chenweiliang.com/us-mobile-number/">美国手机号码</a>
